[gd_scene load_steps=8 format=2]

[ext_resource path="res://scripts/entity_scripts/Enemy_melee.gd" type="Script" id=1]
[ext_resource path="res://sprites/icon.png" type="Texture" id=2]
[ext_resource path="res://sprites/circle.png" type="Texture" id=3]
[ext_resource path="res://instances/Healthbar.tscn" type="PackedScene" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 15.7132, 15.6518 )

[sub_resource type="CapsuleShape2D" id=2]
radius = 14.0
height = 35.0

[sub_resource type="Animation" id=3]
resource_name = "attack"
length = 0.2
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("AttackDirection/AttackPivot/AttackSprite:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AttackDirection/AttackPivot:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 0.2, 1 ),
"update": 0,
"values": [ -30.0, 30.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("AttackDirection/AttackHitbox/CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}

[node name="EnemyMelee" type="KinematicBody2D" groups=["enemy", "enemy_melee", "entity"]]
collision_layer = 10
collision_mask = 3
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
modulate = Color( 1, 0.576471, 0.239216, 1 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource( 1 )

[node name="AttackDirection" type="Position2D" parent="."]

[node name="AttackPivot" type="Position2D" parent="AttackDirection"]
rotation = 0.523599

[node name="AttackSprite" type="Sprite" parent="AttackDirection/AttackPivot"]
visible = false
modulate = Color( 1, 0.576471, 0.239216, 1 )
position = Vector2( 54, 0 )
scale = Vector2( 0.4, 0.4 )
texture = ExtResource( 3 )

[node name="AttackHitbox" type="Area2D" parent="AttackDirection"]
position = Vector2( 50, 0 )
collision_layer = 0
collision_mask = 4
input_pickable = false
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackDirection/AttackHitbox"]
visible = false
shape = SubResource( 2 )
disabled = true

[node name="HealthbarControl" parent="." instance=ExtResource( 4 )]
bar_color = Color( 0.0431373, 0.92549, 0.0784314, 1 )
bar_critical_color = Color( 1, 1, 1, 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/attack = SubResource( 3 )

[connection signal="area_entered" from="AttackDirection/AttackHitbox" to="." method="_on_AttackHitbox_area_entered"]
